refactoring and fixes for swagger
